Fix issue with layout of game-info-card and timer on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,6 @@ br {
   font-family: "Press Start 2P", Arial, Helvetica, sans-serif;
   width: 90%;
   height: 90%;
-  /* border: 2px solid black; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -200,20 +199,18 @@ section.end-game-show {
   width: 100%;
   height: 91%;
   position: relative;
-  display: flex; /* display and flex-wrap used contain the holes is .game */
+  display: flex; /* display and flex-wrap used contain the holes in .game */
   flex-wrap: wrap;
   z-index: 200; /* Pushes the game section to the top so it can always be interacted with */
 }
 
 .hole {
-  /*border: 2px dotted blue; /* Used to help with layout */
   flex: 1 33.3%; /* Flex-grow and flex-basis to evenly portion the holes: https://css-tricks.com/almanac/properties/f/flex/ */
   position: relative;
   overflow: hidden; /* hides the mole */
   background: url("../images/mole-hole.png");
   background-position: bottom;
   background-repeat: no-repeat;
-  /* background-size: 12rem; */
   background-position-y: 112%;
 }
 
@@ -305,10 +302,16 @@ footer {
   .timer {
     right: 0rem;
     font-size: 1rem;
+    margin: auto; /* Aligns the timer */
   }
 
   .game-card-info {
-    width: 96vmin;
+    width: 98vmin; /* Prevents the score and timer begin blocked by the game-info-card */
+    
+  }
+
+  .game-card-heading {
+    padding: 0;
   }
 
   .hole3, .hole6, .hole9 {
